# lab4-b-dogruyolomer-master

./: CMakeLists.txt  README.md  perfect  perfect.c  rounding.c  rounding.h  roundingMain.c
.github/workflows/: classroom.yml
uts/: ut_floatheader.c  ut_intheader.c
